Changes for 1.5.3

 - [DEV-163] added support of perf_counter[path<,period>] (Sasha)
 - [DEV-169] improved msg functionality in GUI (Artem)
 - [DEV-149] added hosts masss update functionality (Artem)
 - [DEV-167] added support of Host Template=<template> in actions (Sasha)
 - [DEV-168] added more supported items in FreeBSD, NetBSD and OpenBSD (Sasha)
 - [DEV-161] changed greeting message (Artem)
 - [DEV-157] added fullscreen icon to monitoring screens (Artem)

Changes for 1.5.2:

 - [DEV-153] added protection against brute force attack (Artem)
 - [DEV-158] added standart sorting to screens (Artem)
 - [DEV-154] added more flexibility to scripts (Artem)
 - [DEV-166] fixed problem with node syncing (Sasha)
 - [DEV-145] added Ldap authentication (Artem)
 - [DEV-147] added support network and disk stats under OpenBSD (Sasha)
 - [DEV-164] added required server performance info to Status of ZABBIX (Alexei)
 - [DEV-160] added time filter in "Availability report" (Artem)
 - [DEV-159] added automatic selection first group and host in WEB monitoring (Artem)
 - [DEV-148] added support of DisablePassive parameter for agent (Alexei)
 - [DEV-143] improved support of numeric performance counters for Windows agents (Sasha)

Changes for 1.5.1:

 - [DEV-141] improved performance of ZABBIX Proxy module (Sasha)
 - [DEV-140] added support of zabbix[proxy,<proxyname>,lastaccess] (Sasha)
 - [DEV-124] screen actions moved to Audit, added filter for Audit (Artem)
 - [DEV-98] added support of ZABBIX Proxy (Sasha)
 - [DEV-134] JSON static buffer (Sasha)
 - [DEV-15] autodiscovery by ICMP pings (Sasha)
 - [DEV-72] improved icmpping* processing. added "-c3" to fping (Sasha) 
 - [DEV-122] improved "Events" screen, added "Event Details" screen (Artem)
 - [DEV-139] added transaction functionality to frontend (Artem)
 - [DEV-138] added support of update interval in icmpping* simpe checks (Sasha)
 - [DEV-137] increased max number of log file lines sent per second to 100 (Alexei)

Changes for 1.5:
